# Heretic2R

./: .gitignore  BUILDING-linux.md  CLAUDE.md  CMakeLists.txt  README.md  pack_release.bat  run.sh  run_win32.sh
.github/workflows/: build.yml  create_release_on_tag.yml
include/glad-GL1.3/: glad.c  glad.h
include/libsmacker/: smacker.c
src/: Heretic2R.sln  win32_cross_compat.h
src/H2Common/: Common.c  DllMain.c  H2Common.vcxproj  H2Common.vcxproj.filters  InfoStrings.c  Math.c  Matrix.c  Motion.c  Random.c  ResourceManager.c  SinglyLinkedList.c  SurfaceProps.c  TextPalette.c  Vector.c  q_Physics.c
src/H2Common/src/: ByteOrder.c  Common.c  Console.c  Console.h  DllMain.c  InfoStrings.c  Math.c  Random.c  ResourceManager.c  SurfaceProps.c  TextPalette.c  cpp.hint
src/Player/: Player.h  Player.vcxproj  Player.vcxproj.filters  main.c  p_actions.c  p_actions.h  p_anim_branch.c  p_anim_branch.h  p_anim_data.c  p_anim_data.h  p_animactor.c  p_animactor.h  p_anims.c  p_anims.h  p_chicken.c  p_chicken.h  p_chicken_anim.c  p_ctrl.c  p_ctrl.h  p_items.c  p_items.h  p_main.c  p_main.h  p_types.h  p_utility.c  p_utility.h  p_weapon.c  p_weapon.h
src/Player/src/: Player.h  p_actions.c  p_actions.h  p_anim_branch.c  p_anim_data.c  p_anim_data.h  p_animactor.c  p_animactor.h  p_chicken.c  p_chicken.h  p_chicken_anim.c  p_items.c  p_main.c  p_types.h  p_utility.c  p_weapon.c
src/WinSnd/: WinSnd.vcxproj  WinSnd.vcxproj.filters  snd_dma.c  snd_dma.h  snd_local.h  snd_mem.c  snd_mem.h  snd_mix.c  snd_mix.h  snd_win.c  snd_win.h
src/client/: cl_camera.c  cl_camera.h  cl_demo.c  cl_effects.c  cl_effects.h  cl_entities.c  cl_ents.c  cl_input.c  cl_inventory.c  cl_main.c  cl_messages.c  cl_messages.h  cl_music.c  cl_music.h  cl_parse.c  cl_player.c  cl_pred.c  cl_prediction.c  cl_screen.c  cl_skeletons.c  cl_skeletons.h  cl_smk.c  cl_smk.h  cl_view.c  client.h  console.c  console.h  glimp_sdl3.c  glimp_sdl3.h  input.h  input_sdl3.c  keys.c  keys.h  menu.c  menu.h  ref.h  screen.h  snd_dll.c  snd_dll.h  snd_loc.h  (+2 more)
src/client effects/: Ambient Effects.c  Ambient Effects.h  Client Effects.c  Client Effects.h  Client Effects.vcxproj  Client Effects.vcxproj.filters  Client Entities.c  Client Entities.h  Generic Character Effects.c  Generic Weapon Effects.c  LevelMaps.c  LightStyles.c  LightStyles.h  Main.c  Particle.c  Particle.h  Player Effects.c  TestEffect.c  Utilities.c  Utilities.h  ce_DLight.c  ce_DLight.h  ce_DefaultMessageHandler.c  ce_Message.c  ce_Message.h  fx_AmmoPickup.c  fx_ArmorHit.c  fx_BarrelExplode.c  fx_BlueRing.c  fx_CorpseRemove.c  fx_DefensePickup.c  fx_Dripper.c  fx_Explosion.c  fx_FeetTrail.c  fx_Fountain.c  fx_GibTrail.c  fx_HealthPickup.c  fx_HellStaff.c  fx_HighPriestessProjectiles.c  fx_HighPriestessProjectiles.h  (+87 more)
src/client effects/src/: ce_DLight.c  ce_DLight.h  ce_DefaultMessageHandler.c  ce_DefaultMessageHandler.h  ce_Effects.c  ce_Effects.h  ce_Entities.c  ce_Entities.h  ce_LevelMaps.c  ce_LightStyles.c  ce_LightStyles.h  ce_Main.c  ce_Message.c  ce_Message.h  ce_Particles.c  ce_Particles.h  ce_Utilities.c  ce_Utilities.h
src/client/menus/: menu_actionkeys.c  menu_actionkeys.h  menu_addressbook.c  menu_addressbook.h  menu_cameracfg.c  menu_cameracfg.h  menu_citymap.c  menu_citymap.h  menu_credits.c  menu_credits.h  menu_dmoptions.c  menu_dmoptions.h  menu_doubletapkeys.c  menu_doubletapkeys.h  menu_downloadoptions.c  menu_downloadoptions.h  menu_game.c  menu_game.h  menu_help.c  menu_help.h  menu_info.c  menu_info.h  menu_joinserver.c  menu_joinserver.h  menu_keys.c  menu_keys.h  menu_loadcfg.c  (+36 more)
src/game/: GameEntity.h  ICScript.h  Script.c  Utilities.c  Utilities.h  buoy.c  buoy.h  c_Dranor.h  c_actors.h  c_ai.c  c_ai.h  c_corvus1.c  c_corvus1.h  c_corvus1_anim.c  c_corvus1_anim.h  c_corvus1_moves.h  c_corvus2.c  c_corvus2.h  c_corvus2_anim.c  c_corvus2_anim.h  c_corvus2_moves.h  c_corvus3.c  c_corvus3.h  c_corvus3_anim.c  c_corvus3_anim.h  c_corvus3_moves.h  c_corvus4.c  c_corvus4.h  c_corvus4_anim.c  c_corvus4_anim.h  c_corvus4_moves.h  c_corvus5.c  c_corvus5.h  c_corvus5_anim.c  c_corvus5_anim.h  c_corvus5_moves.h  c_corvus6.c  c_corvus6.h  c_corvus6_anim.c  c_corvus6_anim.h  (+423 more)
src/launcher/: Heretic2R.rc  Heretic2R.vcxproj  Heretic2R.vcxproj.filters  main.c  resource.h
src/linux/: gen-case-symlinks.py  launcher_main.c  linux_compat.h  net_udp.c  q_shunix.c  sys_unix.c  sys_unix.h
src/qcommon/: Angles.h  ArrayedList.h  Debug.c  Debug.h  EffectFlags.h  FX.h  FlexModel.h  GenericUnions.h  H2Common.h  Heretic2.h  LevelMaps.h  Matrix.h  Message.c  Message.h  Motion.h  ParticleFlags.h  Placement.h  Random.h  Reference.c  Reference.h  ResourceManager.h  SinglyLinkedList.h  Skeletons.c  Skeletons.h  SurfaceProps.h  Vector.h  Version.h  anorms.c  anorms.h  ce_LevelMaps.h  cl_strings.h  cmd.c  cmodel.c  cmodel.h  cmodel_private.h  common.c  cvar.c  files.c  items.h  md4.c  (+16 more)
src/quake2/: quake2.vcxproj  quake2.vcxproj.filters
src/ref_gl/: Hunk.c  Hunk.h  anorms.c  anorms.h  anormtab.c  cpp.hint  fmodel.c  fmodel.h  gl_debug.c  gl_debug.h  gl_draw.c  gl_draw_book.c  gl_draw_cinematic.c  gl_find_surface.c  gl_fmodel.c  gl_fmodel.h  gl_image.c  gl_light.c  gl_local.h  gl_main.c  gl_misc.c  gl_model.c  gl_model.h  gl_sky.c  gl_sprite.c  gl_surf.c  gl_warp.c  m_Reference.c  m_Reference.h  m_SkeletalCluster.h  m_Skeleton.h  qgl.h  qgl_imp.c  qgl_win.c  r_SkeletonLerp.c  r_SkeletonLerp.h  r_Skeletons.c  r_Skeletons.h  ref_gl.vcxproj  ref_gl.vcxproj.filters
src/ref_gl1/: ref_gl1.vcxproj  ref_gl1.vcxproj.filters
src/server/: server.h  sv_ccmds.c  sv_effects.c  sv_effects.h  sv_entities.c  sv_game.c  sv_init.c  sv_main.c  sv_send.c  sv_user.c  sv_world.c
src/snd_sdl3/: snd_sdl3.vcxproj  snd_sdl3.vcxproj.filters
src/win32/: Quake2Main.h  clfx_dll.c  clfx_dll.h  conproc.c  conproc.h  dll_io.h  glw_imp.c  glw_win.h  input_win.c  net_wins.c  q_shwin.c  quake2.vcxproj  quake2.vcxproj.filters  snd_dll.c  snd_dll.h  sys_win.c  sys_win.h  vid_Screenshot.c  vid_dll.c  vid_dll.h  vid_menu.c
stuff/: Heretic_II_Patch_106_for_H2R.md5  Heretic_II_Patch_106_for_H2R.txt
(+670 files in other folders)
